Added drive class and executed other car drive function

--- a/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj.filters
+++ b/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Driver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Driver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
