--- a/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj
+++ b/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj
@@ -141,9 +141,11 @@
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="cppPracticeProblemclasses.cpp" />
+    <ClCompile Include="Driver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h" />
+    <ClInclude Include="Driver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
