--- a/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj.filters
+++ b/cppPracticeProblemclasses/cppPracticeProblemclasses.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Driver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Garage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Driver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Garage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
